--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="face front">
           <div id="white">
             <h1>
-              Valentine Letter<br />
+              Happy Valentine's Day<br />
               <span>
                 <img
                   id="heart"
